--- a/delva-studio/package.json
+++ b/delva-studio/package.json
@@ -5,8 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint",
+    "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -14,6 +13,7 @@
     "motion": "^12.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-masonry-css": "^1.0.16",
     "react-router-dom": "^7.4.0"
   },
   "devDependencies": {
